syntax = "proto3"; // версия proto файлов
package finalProject; // название пакета
option go_package = "./proto";

//message ExprRequest {
//  float val1 = 1;
//  float val2 = 2;
//  string op = 3;
//}
//message AddResponse {
//  float result = 1;
//}
//message SubResponse{
//  float result = 1;
//}
//message MulResponse{
//  float result = 1;
//}
//message DiffResponse{
//  float result = 1;
//}
message SetTaskRequest{
  int32 Id = 1;
  float Result = 2;
}
message SetTaskResponse{

}
message GetTaskRequest{

}
message GetTaskResponse {
  int32  Id = 1;
  float Arg1 = 2;
  float Arg2 = 3;
  string Operation = 4;
  int32 Operation_time = 5;
}
service CalcService {
//  rpc Add (ExprRequest) returns (AddResponse);
//  rpc Sub (ExprRequest) returns (SubResponse);
//  rpc Mul (ExprRequest) returns (MulResponse);
//  rpc Diff (ExprRequest) returns (DiffResponse);
  rpc GetTask(GetTaskRequest)  returns (GetTaskResponse);
  rpc SetTask(SetTaskRequest) returns (SetTaskResponse);
}